
ChangeLog
 [ + added, - removed, * changed ]
 * 13Dec2016 Adds new build information into configured.sh script
 * 13Dec2016 Adds tracing of MPI IO size in Fortran
 * 01Dec2016 Increases default buffer size in the examples by x10
 * 17Nov2016 Patched IO calls again to save/restore the value of errno twice, before and after calling the real I/O symbol
 * 14Nov2016 Builds additional C/Fortran tracing library by default
 * 14Nov2016 Fixes MPI_Ialltoallv label
 - 08Nov2016 Removed flag -Wall from tests/overhead
 * 08Nov2016 Patched IO calls to save/restore the value of errno at entry/exit of the wrappers
 * 07Nov2016 Fixes PEBS memory translations
 * 27Oct2016 Fixes Fortran interfaces for MPI3 non-blocking collective calls
 * 21Oct2016 Changed checks in IO wrappers to ensure the compiler doesn't optimize the conditions and tests for an invalid THREADID
 * 14Oct2016 Fixed interface and wrapper for MPI_Intercomm_create that had a recursion 
 * 14Oct2016 Added event for memkind partition
 * 11Oct2016 Fixes online and dyninst tests
 * 10Oct2016 Fixes IO segfault when opening non-existing file and enables it by default
 * 10Oct2016 Updated configure check for newer Cray XT systems 
 * 23Sep2016 Upgraded to v3.4.1
 * 23Sep2016 Fixed Java and MPI checks 
 * 23Sep2016 Run JAVA checks with make check instead of with make installcheck
 * 22Sep2016 Fixes for make check 
 + 14Sep2016 Adds XML counter distribution (thread-cyclic) to allow each thread to read a different counter set
 + 12Sep2016 Adds states for memory allocation calls
 * 08Sep2016 Changed management of MPI_Cancel calls
 + 07Sep2016 Adds event marking the periodicity of CPU events emission
 * 06Sep2016 Changed environment scripts extrae.sh and configured.sh to locate the EXTRAE_HOME path automatically
 * 06Sep2016 Fixes BFD configure check
 * 02Sep2016 Removes strict XML version check
 * 08Ago2016 Fixes make uninstall
 * 04Aug2016 Fixed bug in configure macro to check for pebs sampling
 * 29Jul2016 Upgraded to v3.4.0