@@ -25,5 +25,7 @@ else
 	echo "You have to define EXTRAE_HOME to run this script"
 fi
 
+export PYTHONPATH=${EXTRAE_HOME}/libexec:${PYTHONPATH}
+
 export LD_LIBRARY_PATH=${EXTRAE_MPI_LIBSDIR}:${EXTRAE_PAPI_LIBSDIR}:${EXTRAE_LIBXML2_LIBSDIR}:${EXTRAE_DYNINST_LIBSDIR}:${EXTRAE_DWARF_LIBSDIR}:${EXTRAE_ELF_LIBSDIR}:${EXTRAE_LIBERTY_LIBSDIR}:${EXTRAE_BFD_LIBSDIR}:${EXTRAE_UNWIND_LIBSDIR}:${EXTRAE_BOOST_LIBSDIR}:${LD_LIBRARY_PATH}
 
